Vendor sample data created, card title was fixed to not break if the company name is too long

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,9 @@ body {
   background-color: #B3D6FF;
 }
 
+h5 {
+  max-width: 100%;
+}
 
 @media (max-width: 576px) {
   .small-screen-img {
